--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -798,24 +798,30 @@ h1.page-header {
 			}
 		}
 	}
-	.captchaImg {
+	
+}
+//contact us
+.node-type-webform{
+	#node-43{
+		.captchaImg {
 		width: 230px;
-	}
-	.form-item-security-code.form-group{
-		width: 100% !important;
-		margin-bottom: 0px !important;
-		#security_code{
-	    	width: 100% !important;
 		}
-	}
-	.webform-submit{
-		position: inherit !important;
-		bottom: 37px;
-	    background-color: @color-see-more !important;
-	    color: @color-white !important;
-	    border: 1px solid @color-see-more !important;
-	    width: 100%;
-	    margin-bottom: 20px;
+		.form-item-security-code.form-group{
+			width: 100% !important;
+			margin-bottom: 0px !important;
+			#security_code{
+		    	width: 100% !important;
+			}
+		}
+		.webform-submit{
+			position: inherit !important;
+			bottom: 37px;
+		    background-color: @color-see-more !important;
+		    color: @color-white !important;
+		    border: 1px solid @color-see-more !important;
+		    width: 100%;
+		    margin-bottom: 20px;
+		}
 	}
 }
 /*end faq's*/
