--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -428,8 +428,8 @@
 	}
 	.panels-flexible-row-new-10{
 		.container{
-			padding-right: 0px;
-			padding-left: 0px;
+			//padding-right: 0px;
+			//padding-left: 0px;
 		}
 	}
 
