--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -801,8 +801,8 @@ h1.page-header {
 	
 }
 //contact us
-.node-type-webform{
-	#node-43{
+.page-contact-us{
+	#block-system-main{
 		.captchaImg {
 		width: 230px;
 		}
