--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1873,143 +1873,160 @@ a.more-link{
 			}
 		}
 	}
-	.panels-flexible-region-new-form-inside{
-		h3{
-			color: @color-text-purple;
-			border-bottom: 2px solid @color-text-purple;
-			font-size: @font-size2-2;
-			padding-bottom: 15px;
-			//font-weight: bold;
-			//margin-bottom: 25px;
-			//margin-top: 50px;
-			font-family: @font-family-base-2;
-			&:after{
-    		    .section-icons("../images/icons/186.png");
-    		}
-		}
-	}
-	
 }
 
-.node-type-webform{
-	#block-system-main{
-		
+//contact us
+.page-contact-us{
+	h1{
+		color: @color-text-purple;
+		border-bottom: 2px solid @color-text-purple !important;
+		padding-bottom: 15px;
+		font-family: @font-family-base-2;
+		&:after{
+    		.section-icons("../images/icons/186.png");
+    	}
 	}
-	#node-43{
-		
-		margin-bottom: 45px;
+	#block-system-main{
 		padding-bottom: 10px;
-		padding-top: 30px;
-		
 		position: relative;
 		.content{
 			> span{
 				display: none;
 			}
 		}
+		.field-type-text-with-summary{
+			font-family: 'Oswald';
+		    font-size: 1.4em;
+		    margin-bottom: 20px;
+		}
 		.container{
 			position: relative;
 		}
-		form{
-			background-color: @color-primary-dark;; 
-			max-width: 600px;
-		}
-		label{
-			color: @color-white;
-			display: block;
-		}
-		select, input, textarea{
-			border-radius: 0;
-			border: none;
-			width: 100%;
-			padding: 6px 12px;
-		}
-		fieldset, .captcha{
-			margin-top: 35px;
-			background-color: rgba(0, 0, 0, 0);
-			border-radius: 0;
-			border: none;
-			width: 100%;
-			legend{
-				display: none;
+		.panels-flexible-row-new-1{
+			padding-top: 20px;
+			background-color: @color-primary-dark;
+			.container{
+				max-width: 600px;
 			}
-			.panel-heading{
-				display: none;
+			label{
+				color: @color-white;
+				display: block;
 			}
-			.panel-body{
-				padding: 0px;
-				.help-block{
+			select, input, textarea{
+				border-radius: 0;
+				border: none;
+				width: 100%;
+				padding: 6px 12px;
+			}
+			fieldset, .captcha{
+				margin-top: 35px;
+				background-color: rgba(0, 0, 0, 0);
+				border-radius: 0;
+				border: none;
+				width: 100%;
+				legend{
 					display: none;
 				}
-				.captchaReadAudio{
-					background: url('../images/icons/audio-form.png') no-repeat;
-					background-size: cover;
-					height: 38px;
-					display: inline-block;
-					margin-bottom: 4px;
-					img{
-						visibility: hidden;
-					}
+				.panel-heading{
+					display: none;
 				}
-				.captchaRefresh{
-					background: url('../images/icons/refresh-form.png') no-repeat; 
-					height: 38px;
-					background-size: cover;
-					display: inline-block;
-					img{
-						visibility: hidden;
+				.panel-body{
+					padding: 0px;
+					.help-block{
+						display: none;
 					}
-				}
-				.form-item-security-code{
-					margin-top: 20px;
-					width: 345px;
-					#security_code{
-						width: 213px;
+					.captchaReadAudio{
+						background: url('../images/icons/audio-form.png') no-repeat;
+						background-size: cover;
+						height: 38px;
+						display: inline-block;
+						margin-bottom: 4px;
+						img{
+							visibility: hidden;
+						}
 					}
-					label:last-child{
-						color: @error-label;
-						margin-top: 5px;
-						font-style: italic;
-						position: absolute;
-						&:before{
-							content: "*";
+					.captchaRefresh{
+						background: url('../images/icons/refresh-form.png') no-repeat; 
+						height: 38px;
+						background-size: cover;
+						display: inline-block;
+						img{
+							visibility: hidden;
+						}
+					}
+					.form-item-security-code{
+						margin-top: 20px;
+						width: 345px;
+						#security_code{
+							width: 213px;
+						}
+						label:last-child{
+							color: @error-label;
+							margin-top: 5px;
+							font-style: italic;
+							position: absolute;
+							&:before{
+								content: "*";
+							}
 						}
 					}
 				}
 			}
-		}
-		.grippie{
-			display: none;
-		}
-		.webform-component{
-			margin-bottom: 25px;
-			label:last-child{
-				color: @error-label;
-				margin-top: 5px;
-				font-style: italic;
-				&:before{
-					content: "*";
+			.grippie{
+				display: none;
+			}
+			.webform-component{
+				margin-bottom: 25px;
+				label:last-child{
+					color: @error-label;
+					margin-top: 5px;
+					font-style: italic;
+					&:before{
+						content: "*";
+					}
 				}
 			}
+			button.form-submit{
+				position: absolute;
+				bottom: 37px;
+			    left: 235px;
+			    border-radius: 0px;
+			    background-color: white;
+			    color: @color-see-more;
+			    font-style: italic;
+			    border: 1px solid white;
+			    &:before{
+			    	content: "> ";
+			    }
+			}
 		}
-		button.form-submit{
-			position: absolute;
-			bottom: 47px;
-		    left: 235px;
-		    border-radius: 0px;
-		    background-color: white;
-		    color: @color-see-more;
-		    font-style: italic;
-		    border: 1px solid white;
-		    &:before{
-		    	content: "> ";
-		    }
+	}
+	.alert-success{
+		background-color: @color-primary;
+		border: none;
+		border-radius: 0px;
+		p{
+			text-align: center;
+			span{
+				color: @color-primary-dark;
+				font-weight: bold !important;
+				font-size: 1.1em !important;
+			}
+		}
+	}
+}
+.logged-in.page-contact-us{
+	button.form-submit{
+			position: inherit !important;
+			margin-bottom: 15px !important;
+		&:before{
+			content: "> ";
 		}
 	}
 }
 
 
-//page oira faq
+//page oira faqs
 .page-oira-faqs{
 	#block-system-main{
 		background-color: @color-background-light-purple; 
