--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -2016,11 +2016,13 @@ a.more-link{
 	}
 }
 .logged-in.page-contact-us{
-	button.form-submit{
-			position: inherit !important;
-			margin-bottom: 15px !important;
-		&:before{
-			content: "> ";
+	.panels-flexible-row-new-1{
+		button.form-submit{
+				position: inherit !important;
+				margin-bottom: 15px !important;
+			&:before{
+				content: "> ";
+			}
 		}
 	}
 }
