--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4081,3 +4081,20 @@ div[id ^= "mini-panel-partner_in_"], {
 	}
 }
 /*end retranslate*/
+
+/*Private Zone
+*********************************************/
+
+//menu
+.menu-name-menu-private-zone{
+	background-color: @color-primary-dark; 
+	ul.menu{
+		> li{
+			float: left;
+			max-width: 12%;
+			text-align: center;
+		}
+	}
+}
+
+/*End private zone*/
