--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4139,6 +4139,7 @@ div[id ^= "mini-panel-partner_in_"], {
 		background-color: @color-primary;
 		padding-top: 25px;
 		padding-bottom: 25px;
+		margin-bottom: 20px;
 	}
 	.grippie{
 		display: none;
@@ -4146,14 +4147,63 @@ div[id ^= "mini-panel-partner_in_"], {
 	label{
 		color: @color-text-purple-darker;
 	}
-	input, textarea, select{
+	input, textarea, select, .form-control{
 		border: none;
 		border-radius: 0px;
+	}
+	select{
+		background: url("../images/icons/down-arrow-inputs.png") no-repeat right #fff;
+	    appearance:none;
+	    margin-right: 50px !important;
+	    -moz-appearance:none; /* Firefox */
+	    -webkit-appearance:none; /* Safari and Chrome */
+	    background-position-x: right;
+	}
+	button{
+		border: none;
+		border-radius: 0px;
+		height: 36px;
+		font-weight: bold;
+	}
+	//url
+	#edit-field-website-und-0-url{
+		max-width: 40%;
+	}
+	//tags
+	#edit_field_tags_und_chosen{
+		width: 100% !important;
+		.chosen-choices{
+			background-image: inherit;
+			border: none;
+			box-shadow: none;
+		}
+		.chosen-drop{
+			border: none;
+			box-shadow: none;
+		}
 	}
 	//imagen
 	#edit-field-image{
 		.image-widget-data{
-			
+			display: block;
+			float: none;
+			clear: both;
+			.form-file{
+				width: 40%;
+				display: inline-block;
+			}
+			button{
+				padding: 7px 15px;
+				vertical-align: top;
+				border: none;
+				border-radius: 0px;
+				background-color: @color-primary-dark;
+				color: white;
+			}
+			textarea{
+				width: 40%;
+				height: 36px;
+			}
 		}
 	}
 	//fecha
@@ -4169,9 +4219,29 @@ div[id ^= "mini-panel-partner_in_"], {
 				padding: 0px;
 				.form-type-select{
 					margin-right: 15px;
+					select{
+						margin-right: 15px;
+					}
 				}
 			}
 		}
+	}
+
+	//buttons
+	button#edit-save-preview{
+		background-color: @color-see-more;
+		margin-top: 40px;
+		&:before{
+			content: "> ";
+		}
+	}
+	button#edit-send-for-approval{
+		display: block;
+	    width: 100%;
+	    height: 70px;
+	    margin-top: 50px;
+	    background-color: @color-primary-dark;
+	    font-size: @font-size1-4;
 	}
 }
 
